--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: AeMFA
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Functions of the book "Angewandte empirische Methoden in Finance & Accounting"
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Matthias Gehrke
+Maintainer: Matthias Gehrke <AeMFA@matthias-gehrke.de>
+Description: This package provides the functions which where developed for the book 
+  "Angewandte empirische Methoden in Finance & Accounting".
+Imports:
+    ggformula,
+    ggfortify,
+    xts
+Depends:
+    R (>= 4.1.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
+License: GPL (>= 3)
